Updated makefile for test2.exe.

--- a/assignment-3/question-1/Makefile
+++ b/assignment-3/question-1/Makefile
@@ -2,12 +2,12 @@ CC = gcc
 CFLAGS = -std=c99
 LFLAGS = 
 LIBS = -lm
-OBJECTS = test1.o quadrature.o
-EXE = test1.exe
+OBJECTS = quadrature.o
+EXE = test1.exe test2.exe
 .PHONY: clean help
 
-%.exe : $(OBJECTS)
-	$(CC) $(OBJECTS) $(LIBS) -o $@ 
+%.exe : %.o $(OBJECTS)
+	$(CC) $(OBJECTS) $< $(LIBS) -o $@ 
 
 %.o : %.c
 	$(CC) $(CFLAGS) -c $< 
@@ -20,5 +20,6 @@ clean:
 help:
 	@echo "Valid targets:"
 	@echo "  test1.exe"
+	@echo "  test2.exe"
 	@echo "  all"
 	@echo "  clean:  removes .o and .exe files"
